# TransRustica

./: Cargo.toml  README.md
cli/: Cargo.toml  main.rs
shared/: Cargo.toml  lib.rs
web/: Cargo.toml  main.rs  routes.rs
web/public/: index.html  script.js
