[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = ">=4.3.22", features = ["derive"] }
colored = ">=2.0.4"
indicatif = ">=0.17.6"
lazy_static = ">=1.4.0"
num_cpus = ">=1.16.0"
path-clean = "1.0.1"
rayon = ">=1.7.0"
regex = ">=1.9.3"
reqwest = { version = ">=0.11.20", features = ["json"] }
rusqlite = { version = ">=0.31.0", features = ["bundled"] }
serde = { version = ">=1.0.183", features = ["derive"] }
serde_json = ">=1.0.104"
threadpool = ">=1.8.1"
walkdir = ">=2.3.3"

[lib]
path = "lib.rs"
