[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = ">=0.21.4"
indicatif = ">=0.17.6"
lazy_static = ">=1.4.0"
rocket = { version = ">=0.5.0", features = ["json"] }
rocket_ws = ">=0.1.0"
rusqlite = { version = ">=0.31.0", features = ["bundled"] }
serde = { version = ">=1.0.183", features = ["derive"] }
serde_derive = ">=1.0.188"
serde_json = ">=1.0.104"
tokio = { version = ">=1.32.0", features = ["full", "macros"] }
uuid = { version = ">=1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
shared = { path = "../shared" }
rust-embed = { version = ">=8.3.0", features = ["rocket"] }

[[bin]]
name = "web"
path = "main.rs"
